--- a/EEditor/Properties/Resources.resx
+++ b/EEditor/Properties/Resources.resx
@@ -364,4 +364,7 @@
   <data name="BLOCKS_deco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BLOCKS_deco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="blocks_shape" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\blocks_shape.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
